# openquant

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  clippy.toml  justfile  pyproject.toml  rustfmt.toml  setup.py
benchmarks/: baseline_benchmarks.json  benchmark_manifest.json  threshold_overrides.json
crates/openquant/: Cargo.toml
crates/openquant/benches/: hpc_parallel_scaling.rs  perf_hotspots.rs  streaming_hpc_scaling.rs  synthetic_ticker_pipeline.rs
crates/openquant/examples/: research_notebook_smoke.rs
crates/openquant/src/: backtest_statistics.rs  backtesting_engine.rs  bet_sizing.rs  cla.rs  codependence.rs  combinatorial_optimization.rs  cross_validation.rs  data_processing.rs  data_structures.rs  ef3m.rs  ensemble_methods.rs  etf_trick.rs  feature_importance.rs  filters.rs  fingerprint.rs  fracdiff.rs  hcaa.rs  hpc_parallel.rs  hrp.rs  hyperparameter_tuning.rs  labeling.rs  lib.rs  microstructural_features.rs  notebook_modeling.rs  onc.rs  pipeline.rs  portfolio_optimization.rs  risk_metrics.rs  sample_weights.rs  sampling.rs  sb_bagging.rs  strategy_risk.rs  streaming_hpc.rs  structural_breaks.rs  synthetic_backtesting.rs
crates/openquant/src/util/: fast_ewma.rs  mod.rs  volatility.rs
crates/openquant/tests/: backtest_statistics.rs  backtesting_engine.rs  bet_sizing.rs  ch10_snippets.rs  cla.rs  codependence.rs  combinatorial_optimization.rs  cross_validation.rs  data_processing.rs  data_structures_run_imbalance.rs  data_structures_standard.rs  ef3m.rs  ensemble_methods.rs  etf_trick.rs  fast_ewma.rs  feature_importance.rs  filters.rs  fingerprint.rs  fracdiff.rs  futures_roll.rs  hcaa.rs  hpc_parallel.rs  hrp.rs  hyperparameter_tuning.rs  labeling.rs  microstructural_features.rs  notebook_modeling.rs  onc.rs  portfolio_optimization.rs  risk_metrics.rs  sample_weights.rs  sampling.rs  sb_bagging.rs  strategy_risk.rs  streaming_hpc.rs  structural_breaks.rs  synthetic_backtesting.rs  volatility_features.rs
crates/openquant/tests/fixtures/bet_sizing/: README.md
crates/openquant/tests/fixtures/portfolio_optimization/: README.md
crates/pyopenquant/: Cargo.toml
crates/pyopenquant/src/: backtest_stats.rs  bars.rs  bet_sizing.rs  cla.rs  codependence.rs  data.rs  ef3m.rs  ensemble.rs  fast_ewma.rs  filters.rs  fracdiff.rs  hcaa.rs  helpers.rs  hrp.rs  labeling.rs  lib.rs  microstructural.rs  onc.rs  pipeline.rs  portfolio.rs  risk.rs  sample_weights.rs  sampling.rs  sb_bagging.rs  strategy_risk.rs  streaming_hpc.rs  structural_breaks.rs  synthetic_bt.rs  volatility.rs
data_structures/: base_class.py  standard_bars.py
docs/: benchmark_snapshot.md  conf.py  index.rst  (+8 more)
docs-site/: astro.config.mjs  package-lock.json  package.json
(+264 files in other folders)
