[package]
name = "openquant"
version = "0.1.0"
authors = ["seankoval <seanmkoval@gmail.com>"]
edition = "2021"

[dependencies]
chrono = "0.4"
itertools = "0.13"
rand = { version = "0.8", features = ["std"] }
statrs = "0.16"
rand_distr = "0.4"
nalgebra = "0.32"
csv = "1"

[dev-dependencies]
csv = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
itertools = "0.13"
